# poc-indexacao-reversa

./: README.md  requirements.txt
app/: main.py
app/api/: indexer.py  tatuador.py
app/core/: database.py
app/models/: tatuador.py  word.py  word_user_link.py
app/repositories/: tatuador_indice_repo.py  tatuador_repo.py
app/schemas/: tatuador.py
app/services/: indexer.py
busca-service/: .env.docker  .env.example  Dockerfile  README.md  pyproject.toml
busca-service/src/: main.py
busca-service/src/clients/: tokenizador_core_client.py
busca-service/src/config/: env.py
busca-service/src/model/: database.py  hashtag_model.py  models.py  tatuador_model.py
busca-service/src/router/: __init__.py  buscador_router.py
busca-service/src/service/: buscador_service.py
database/: Dockerfile  README.md
database/sql/: 2_populate.sql  setup.sql
discovery/: index.ipynb  indexacao.ipynb  out.csv  out2.csv  tokenizacao.ipynb
discovery/assets/: tatuadores.csv
docs/: .gitignore  README.md  start.sh
docs/poc-indexacao-reversa/: containers.dsl  relationships.dsl  styles.dsl  views.dsl  workspace.dsl
front_search-tatoo/: Dockerfile  README.md  package-lock.json  package.json
front_search-tatoo/docker/: .env.docker
front_search-tatoo/src/app/: layout.tsx  not-found.tsx  page.tsx
front_search-tatoo/src/app/dtos/: tatoo.ts
front_search-tatoo/src/app/search/: page.tsx
front_search-tatoo/src/app/testes/: page.tsx
front_search-tatoo/src/components/header/: index.tsx
front_search-tatoo/src/components/searchComponents/: listTatoo.tsx
front_search-tatoo/src/config/: env.ts
indexador-service/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
indexador-service/app/: main.py
indexador-service/app/api/: tatuador.py
indexador-service/app/config/: env.py
indexador-service/app/core/: database.py
indexador-service/app/models/: tatuador.py
indexador-service/app/repositories/: tatuador_indice_repo.py  tatuador_repo.py
indexador-service/app/schemas/: tatuador.py
tokenizador-core/: Dockerfile  README.md  pyproject.toml
tokenizador-core/scripts/: nltk_datasets.py
tokenizador-core/src/: main.py
tokenizador-core/src/dto/: frase_request.py
tokenizador-core/src/http/: tokens_response.py
tokenizador-core/src/pipelines/: __init__.py
tokenizador-core/src/pipelines/v1/: __init__.py
tokenizador-core/src/routers/: __init__.py  pipeline_router.py
tokenizador-core/src/services/pipelines/: __init__.py  pipeline_v1.py  token_pipeline.py
