[project]
name = "indexador-service"
version = "1.0.0"
description = "Serviço para criar e indexar tatuadores no banco de dados"
authors = [
    {name = "Joaopedro1717",email = "j.pedrominuto@hotmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
name = "indexador-service"
version = "1.0.0"
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
